fix: fix bug login